--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 input:-webkit-autofill {
@@ -18,8 +19,10 @@ input:-webkit-autofill:focus {
 .container{
     display: flex;
     justify-content: space-between;
+    
 }
 body{
+    
     color: #E8EDF2;
     font-family: "DM Sans", sans-serif;    
 }
@@ -39,7 +42,6 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    
     background-color:  #0e1e2b;
 }
 
@@ -166,4 +168,45 @@ h1{
     box-shadow: 0 4px 10px black;
      transform: scale(1.01);
      background-color: rgba(255, 255, 255, 0.1);
+}
+
+@media (max-width: 1023px){
+    
+  .input-box {
+    width: 400px;
+    
+  }
+
+}
+
+@media(max-width: 768px){
+    .img-sign-up{
+        display: none;
+        height: 0;
+    }
+    
+    .sign-up{
+        width: 100%;
+        height: auto;
+        min-height: 100vh;
+    }
+}
+
+@media (max-width: 480px) {
+  .input-box {
+    max-width: 300px;
+  }
+
+  .btn-sign-up,
+  .google-btn {
+    max-width: 300px;
+  }
+
+  .separator span {
+    font-size: 12px;
+  }
+
+  h1{
+    font-size: 40px;
+  }
 }
